# lib-guitar-io

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build.yml  static-analysis.yml  tests.yml
include/: AudioDevice.h  AudioDeviceManager.h  AudioMixer.h  PolyphonicGenerator.h  RtAudioDevice.h  SineWaveGenerator.h
src/: AudioDevice.cpp  AudioDeviceManager.cpp  AudioMixer.cpp  PolyphonicGenerator.cpp  RtAudioDevice.cpp  SineWaveGenerator.cpp
